# asteroids-game

./: .gitignore  README.md  asteroid.py  asteroidfield.py  circleshape.py  constants.py  game_over_screen.py  main.py  pause_screen.py  player.py  pyproject.toml  requirements.txt  score_tracker.py  shot.py
asteroids/: constants.py  game_over_screen.py  pause_screen.py  score_tracker.py
asteroids/game_objects/: __init__.py  asteroid.py  asteroidfield.py  player.py  shot.py
asteroids/game_objects/tests/: test_collisions.py
asteroids/screens/: common.py  game_over.py  pause.py  start.py
asteroids/shapes/: __init__.py  circle_shape.py  polygon.py  shape.py  triangle_shape.py
game_objects/: __init__.py  asteroid.py  asteroidfield.py  player.py
shapes/: __init__.py  circle_shape.py  triangle_shape.py
